@startuml
'https://plantuml.com/class-diagram

package sensors <<Folder>> {

 package observations <<Folder>> {
  class ObservableProperty
  class FeatureOfInterest
  class Result
  class Observation
 }

 package devices <<Folder>> {
  class Platform {
    label
    comment
    }
  class System {
    label
    comment
    }
  class Sensor
 }

 package communication <<Folder>> {
  class Group
 }

class Location

}

Platform o-- "*" System
System <|-- Sensor

Observation "1" <-- "1" Result : hasResult
Observation "1" <-- "1" FeatureOfInterest
Observation "1" <-- "1" ObservableProperty
Observation "1" <-- "1" Sensor

System "*" --o "*" Group : participant

@enduml